# SimpleSampler

./: .gitignore  README.md  bank_example.json  midi_learn.py  pyproject.toml
.github/workflows/: release.yml
src/: seq.py
src/simplesampler/: main.py
src/simplesampler/audio/: playback.py
src/simplesampler/midi/: __init__.py
src/simplesampler/schemas/: config.py  ss_config.py
src/simplesampler/sequencer/: app.py  engine.py  schema.py
src/simplesampler/tui/: app.py
