[project]
name = "simplesampler"
version = "0.1.0"
description = "A low-latency terminal sample pad with MIDI support."
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "sounddevice>=0.5.1",
    "pydantic>=2.12.5",
    "textual>=6.10.0",
    "mido[ports-rtmidi]>=1.3.3",
]

[project.scripts]
simplesampler = "simplesampler.main:main"
simplesampler-seq = "simplesampler.sequencer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
